# dealer-applications

./: .gitignore  DOCUMENT_PACK_MARKETPLACE_PLAN.md  IMPLEMENTATION_STATUS_AND_NEXT_STEPS.md  README.md  STATUS_REFACTORING_PLAN.md  TODO.md  file  filespath.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.cursor/plans/: subscription-gating-and-desktop-auth-001db81b.plan.md
.github/workflows/: release-desktop.yml  release.yml  releave.yml
apps/desktop/: .gitignore  INDEXEDDB_TO_SQLITE_MIGRATION.md  INDEXEDDB_VIEWING_GUIDE.md  README.md  SIGNATURE_FIX_TODO.md  SQLITE_MIGRATION_COMPLETE.md  SQLITE_MIGRATION_NEXT_STEPS.md  SQLITE_MIGRATION_PLAN.md  UPDATER_SETUP.md  build-signed.sh  components.json  package.json  todo.md  tsconfig.json  vite.config.ts
apps/desktop/src/: App.css  App.tsx  main.tsx  routeTree.gen.ts
apps/desktop/src-tauri/: Cargo.toml  entitlements.plist  info.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  desktop.json
apps/desktop/src-tauri/migrations/: 001_initial_schema.sql  002_add_sync_fields.sql  003_add_document_paths.sql  004_add_vehicle_images.sql  005_add_user_id.sql
apps/desktop/src-tauri/src/: aws_config.rs  database.rs  dealership_auth.rs  docs_config.rs  encryption.rs  file_operations.rs  file_permissions.rs  license.rs  main.rs  s3_service.rs  security.rs  session.rs  storage.rs  user_id.rs
apps/docs/: next.config.js  package.json  source.config.ts  tsconfig.json
apps/docs/.source/: index.ts  source.config.mjs
apps/docs/app/: globals.css  layout.tsx
apps/docs/lib/: source.ts
apps/mobile/: .env.example  .npmrc  App.tsx  README.md  app.json  convex-api.ts  metro.config.js  package.json  tailwind.config.js  tsconfig.json
apps/mobile/app/: _layout.tsx  index.tsx
apps/mobile/assets/: photosby.json
apps/mobile/components/: AppHeader.tsx  DealershipSummaryWidget.tsx  MenuModal.tsx  auth-buttons.tsx
apps/mobile/constants/: theme.ts
apps/mobile/lib/: clerk.ts  convex.ts
apps/mobile/providers/: ClerkProvider.tsx  ConvexProvider.tsx
apps/web/: README.md  convex.json  drizzle.config.ts  next.config.ts  package.json  pnpm-lock.yaml  setup-s3-lifecycle.ts  todo.md  tsconfig.json
apps/web/scripts/: car_inventory.csv  car_inventory.json  car_inventory_generator.py  clients.csv  clients_import.csv  clients_test.csv  contact_generator.py  dealerships.csv  fake_contacts.csv  fake_contacts.json  generate-api-secret.js  generate_car_data.py  generate_client_data.py  generate_dealer_data.py  generate_venote_data.py  german_cars.csv  vehicles_import.csv  vehicles_test.csv
apps/web/src/: middleware.ts
convex/: adminIpManagement.ts  allowList.ts  api_keys.ts  auditLog.ts  auth.config.ts  auth.ts  authRateLimit.ts  clerk.ts  clients.ts  crons.ts  dealerDocumentPackPurchases.ts  dealerships.ts  deals.ts  debug.ts  deeplink.ts  desktopAuth.ts  desktop_subscriptions.ts  developer.ts  documentPackTemplates.ts  documentPacks.ts  documents.ts  domain_verification.ts  emailAuth.ts  emailService.ts  emailTemplates.ts  employees.ts  external_api.ts  guards.ts  http.ts  index.ts  internal.ts  inventory.ts  licenseWebhook.ts  licenses.ts  masterAdmin.ts  notifications.ts  package.json  pdfFieldInspector.ts  pdfFieldMapper.ts  pdfProcessor.ts  (+26 more)
convex/_generated/: api.d.ts
convex/api/: licenseAuth.ts
convex/documents/: deal_generator.ts  debug.ts  fields.ts  generator.ts  templates.ts
convex/lib/: cleanup.ts  data_transformer.ts  export.ts  expression_evaluator.ts  pdf_data_preparer.ts  pricing.ts  statuses.ts
convex/queries/: templates.ts
db.vehicles/: vehicles.ts
docs/: AUTO_UPDATE_SETUP.md  MOBILE_APP_SETUP.md  POLAR_SETUP_GUIDE.md  STANDALONE_DESKTOP_SETUP_COMPLETE.md
markdown/: COMPREHENSIVE_CODEBASE_ANALYSIS.md  CRITICAL_FIXES_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  REALTIME_SYNC_PLAN.md  STATUS_REFACTORING_PLAN.md  VEHICLE_ENHANCEMENT_PLAN.md  dealer_apps_production_hardening_feature_roadmap_solo_dev_plan.md  tickets_todos.md
scripts/: updater.sh
(+422 files in other folders)
