[package]
name = "dealer-software"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dealer_software_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "3.6.3"
once_cell = "1.19"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"


# Encryption dependencies
aes-gcm = "0.10"      # AES-256-GCM encryption
base64 = "0.22"       # Base64 encoding/decoding
rand = "0.9.2"          # Random number generation
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
env_logger = "0.11.8"
log = "0.4.28"

# Desktop-specific dependencies (macOS, Windows, Linux)
[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
# Single instance plugin with deep-link feature (must be first in setup)
tauri-plugin-single-instance = { version = "2.0.0", features = ["deep-link"] }
# Deep link plugin - works on all desktop platforms
tauri-plugin-deep-link = "2.0.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
