[package]
name = "dealer-software"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dealer_software_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
tauri = { version = "2.9.2", features = [] }
tauri-plugin-opener = "2.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "3.6.3"
once_cell = "1.19"
tauri-plugin-shell = "2.3.1"
tauri-plugin-store = "2.4.1"


# Encryption dependencies
aes-gcm = "0.10.3"      # AES-256-GCM encryption (uses generic-array 1.x)
base64 = "0.22"       # Base64 encoding/decoding
rand = "0.9.2"          # Random number generation
tauri-plugin-process = "2.3.0"
tauri-plugin-dialog = "2.4.0"
env_logger = "0.11.8"
log = "0.4.28"
fs = "0.0.5"
tauri-plugin-fs = "2.4.4"
dirs = "6.0.0"
tokio = "1.48.0"
tokio-stream = "0.1"

# License management dependencies
hostname = "0.4"        # Get machine hostname
sha2 = "0.10"           # SHA-256 hashing for machine ID fallback

# SQLite database
rusqlite = { version = "0.37", features = ["bundled", "backup", "blob", "chrono", "serde_json"] }
chrono = { version = "0.4", features = ["serde"] }

# AWS S3 for document sync
aws-config = "1.1.7"
aws-sdk-s3 = "1.28.0"
aws-credential-types = "1.1.1"

# Desktop-specific dependencies (macOS, Windows, Linux)
[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
# Single instance plugin with deep-link feature (must be first in setup)
tauri-plugin-single-instance = { version = "2.3.6", features = ["deep-link"] }
# Deep link plugin - works on all desktop platforms
tauri-plugin-deep-link = "2.4.0"

# Windows-specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"  # Windows registry access for machine GUID

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.8"
